--- a/pynb_mergeVote.ipynb
+++ b/pynb_mergeVote.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -13,9 +15,9 @@
      "text": [
       "SUB_02_64_35000_10ep.csv\n",
       "(40669, 2)\n",
-      "SUB_02_64_35000_10ep.csv\n",
-      "(40669, 2)\n",
       "SUB_PUB_submission_bag_of_colors_0.819.csv\n",
+      "(40669, 2)\n",
+      "SUB_PUB_sub_0.8527_XGB_histograms.csv\n",
       "(40669, 2)\n"
      ]
     }
@@ -27,8 +29,9 @@
     "\n",
     "file1 = 'SUB_02_64_35000_10ep.csv'\n",
     "file2 = 'SUB_PUB_submission_bag_of_colors_0.819.csv'\n",
+    "file3 = 'SUB_PUB_sub_0.8527_XGB_histograms.csv'\n",
     "\n",
-    "listFiles = [file1, file1, file2]\n",
+    "listFiles = [file1, file2, file3]\n",
     "\n",
     "THRESHOLD = 1\n",
     "\n",
@@ -59,9 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -78,13 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "f = open('SUB_MERGE_01-B.csv', 'w')\n",
+    "f = open('SUB_MERGE_02.csv', 'w')\n",
     "f.write('image_name,tags\\n')\n",
     "for name in totalDict:\n",
     "    f.write(name+',')\n",
@@ -102,7 +109,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -111,7 +120,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -120,7 +131,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
