--- a/pynb_03.ipynb
+++ b/pynb_03.ipynb
@@ -68,7 +68,7 @@
     "trainPath = '/train-jpg'\n",
     "testPath = '/test-jpg'\n",
     "\n",
-    "PIC_SIZE = 64\n",
+    "PIC_SIZE = 32\n",
     "\n"
    ]
   },
@@ -370,9 +370,14 @@
     "                 activation='relu',\n",
     "                 input_shape=(PIC_SIZE, PIC_SIZE, 3)))\n",
     "\n",
-    "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(Conv2D(32, (3, 3), activation='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
+    "\n",
+    "model.add(Conv2D(32, (3, 3), activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
     "model.add(Flatten())\n",
     "model.add(Dense(128, activation='relu'))\n",
     "model.add(Dropout(0.5))\n",
@@ -440,7 +445,7 @@
     "#image_name,tags\n",
     "#test_0,primary clear agriculture road water\n",
     "\n",
-    "subName = path1 + '/SUB_02_64_20.csv'\n",
+    "subName = path1 + '/SUB_03_32.csv'\n",
     "f = open(subName, 'w')\n",
     "f.write('image_name,tags\\n')\n",
     "for i in range(0,len(predsText)):\n",
