--- a/pynb_03.ipynb
+++ b/pynb_03.ipynb
@@ -19,7 +19,7 @@
       "WARNING (theano.sandbox.cuda): The cuda backend is deprecated and will be removed in the next release (v0.10).  Please switch to the gpuarray backend. You can get more information about how to switch at this URL:\n",
       " https://github.com/Theano/Theano/wiki/Converting-to-the-new-gpu-back-end%28gpuarray%29\n",
       "\n",
-      "Using gpu device 0: Tesla K80 (CNMeM is disabled, cuDNN 5103)\n"
+      "WARNING (theano.sandbox.cuda): CUDA is installed, but device gpu is not available  (error: Unable to get the number of gpus available: no CUDA-capable device is detected)\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -246,18 +246,18 @@
      "text": [
       "Read train images\n",
       "/home/ec2-user/DataScientist/planet/train-jpg/*.jpg\n",
-      "Read train data time: 42.49 seconds\n",
+      "Read train data time: 74.08 seconds\n",
       "(40479, 40479)\n",
       "['train_235', 'train_8857', 'train_40321', 'train_16924', 'train_13411']\n",
-      "(128, 128, 3)\n",
+      "(32, 32, 3)\n",
       "[ 0.  1.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       "[ 0.  1.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
       "Read test images\n",
       "/home/ec2-user/DataScientist/planet/test-jpg/*.jpg\n",
-      "Read test data time: 42.52 seconds\n",
+      "Read test data time: 74.54 seconds\n",
       "(40669, 40669)\n",
       "['test_2265', 'test_10037', 'test_37861', 'test_4787', 'test_29331']\n",
-      "(128, 128, 3)\n"
+      "(32, 32, 3)\n"
      ]
     }
    ],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -299,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(40479, 128, 128, 3)\n",
+      "(40479, 32, 32, 3)\n",
       "(40479, 17)\n"
      ]
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -337,27 +337,47 @@
      "output_type": "stream",
      "text": [
       "Train on 35000 samples, validate on 5479 samples\n",
-      "Epoch 1/10\n",
-      "35000/35000 [==============================] - 460s - loss: 0.2601 - acc: 0.9027 - val_loss: 0.2121 - val_acc: 0.9168\n",
-      "Epoch 2/10\n",
-      "35000/35000 [==============================] - 460s - loss: 0.2170 - acc: 0.9162 - val_loss: 0.1932 - val_acc: 0.9224\n",
-      "Epoch 3/10\n",
-      "35000/35000 [==============================] - 461s - loss: 0.2041 - acc: 0.9198 - val_loss: 0.1844 - val_acc: 0.9241\n",
-      "Epoch 4/10\n",
-      "35000/35000 [==============================] - 461s - loss: 0.1955 - acc: 0.9226 - val_loss: 0.1790 - val_acc: 0.9280\n",
-      "Epoch 5/10\n",
-      "35000/35000 [==============================] - 460s - loss: 0.1887 - acc: 0.9258 - val_loss: 0.1761 - val_acc: 0.9302\n",
-      "Epoch 6/10\n",
-      "35000/35000 [==============================] - 460s - loss: 0.1831 - acc: 0.9280 - val_loss: 0.1708 - val_acc: 0.9333\n",
-      "Epoch 7/10\n",
-      "35000/35000 [==============================] - 460s - loss: 0.1764 - acc: 0.9306 - val_loss: 0.1657 - val_acc: 0.9341\n",
-      "Epoch 8/10\n",
-      "35000/35000 [==============================] - 461s - loss: 0.1705 - acc: 0.9325 - val_loss: 0.1638 - val_acc: 0.9356\n",
-      "Epoch 9/10\n",
-      "35000/35000 [==============================] - 461s - loss: 0.1666 - acc: 0.9344 - val_loss: 0.1602 - val_acc: 0.9363\n",
-      "Epoch 10/10\n",
-      "35000/35000 [==============================] - 460s - loss: 0.1614 - acc: 0.9358 - val_loss: 0.1648 - val_acc: 0.9361\n",
-      "0.307892938125\n"
+      "Epoch 1/20\n",
+      "35000/35000 [==============================] - 109s - loss: 0.2537 - acc: 0.9043 - val_loss: 0.2151 - val_acc: 0.9188\n",
+      "Epoch 2/20\n",
+      "35000/35000 [==============================] - 109s - loss: 0.2033 - acc: 0.9207 - val_loss: 0.1833 - val_acc: 0.9262\n",
+      "Epoch 3/20\n",
+      "35000/35000 [==============================] - 112s - loss: 0.1855 - acc: 0.9277 - val_loss: 0.1662 - val_acc: 0.9350\n",
+      "Epoch 4/20\n",
+      "35000/35000 [==============================] - 113s - loss: 0.1763 - acc: 0.9315 - val_loss: 0.1624 - val_acc: 0.9354\n",
+      "Epoch 5/20\n",
+      "35000/35000 [==============================] - 114s - loss: 0.1719 - acc: 0.9331 - val_loss: 0.1577 - val_acc: 0.9366\n",
+      "Epoch 6/20\n",
+      "35000/35000 [==============================] - 114s - loss: 0.1663 - acc: 0.9347 - val_loss: 0.1601 - val_acc: 0.9364\n",
+      "Epoch 7/20\n",
+      "35000/35000 [==============================] - 114s - loss: 0.1626 - acc: 0.9363 - val_loss: 0.1533 - val_acc: 0.9381\n",
+      "Epoch 8/20\n",
+      "35000/35000 [==============================] - 114s - loss: 0.1590 - acc: 0.9382 - val_loss: 0.1440 - val_acc: 0.9423\n",
+      "Epoch 9/20\n",
+      "35000/35000 [==============================] - 114s - loss: 0.1555 - acc: 0.9397 - val_loss: 0.1468 - val_acc: 0.9418\n",
+      "Epoch 10/20\n",
+      "35000/35000 [==============================] - 114s - loss: 0.1525 - acc: 0.9406 - val_loss: 0.1382 - val_acc: 0.9446\n",
+      "Epoch 11/20\n",
+      "35000/35000 [==============================] - 115s - loss: 0.1510 - acc: 0.9415 - val_loss: 0.1432 - val_acc: 0.9432\n",
+      "Epoch 12/20\n",
+      "35000/35000 [==============================] - 115s - loss: 0.1486 - acc: 0.9419 - val_loss: 0.1358 - val_acc: 0.9451\n",
+      "Epoch 13/20\n",
+      "35000/35000 [==============================] - 115s - loss: 0.1469 - acc: 0.9430 - val_loss: 0.1360 - val_acc: 0.9454\n",
+      "Epoch 14/20\n",
+      "35000/35000 [==============================] - 115s - loss: 0.1462 - acc: 0.9431 - val_loss: 0.1328 - val_acc: 0.9471\n",
+      "Epoch 15/20\n",
+      "35000/35000 [==============================] - 114s - loss: 0.1448 - acc: 0.9437 - val_loss: 0.1343 - val_acc: 0.9453\n",
+      "Epoch 16/20\n",
+      "35000/35000 [==============================] - 114s - loss: 0.1435 - acc: 0.9439 - val_loss: 0.1322 - val_acc: 0.9471\n",
+      "Epoch 17/20\n",
+      "35000/35000 [==============================] - 115s - loss: 0.1429 - acc: 0.9442 - val_loss: 0.1313 - val_acc: 0.9472\n",
+      "Epoch 18/20\n",
+      "35000/35000 [==============================] - 114s - loss: 0.1419 - acc: 0.9447 - val_loss: 0.1383 - val_acc: 0.9439\n",
+      "Epoch 19/20\n",
+      "35000/35000 [==============================] - 114s - loss: 0.1405 - acc: 0.9450 - val_loss: 0.1342 - val_acc: 0.9458\n",
+      "Epoch 20/20\n",
+      "35000/35000 [==============================] - 115s - loss: 0.1397 - acc: 0.9454 - val_loss: 0.1323 - val_acc: 0.9472\n",
+      "0.348591022886\n"
      ]
     }
    ],
@@ -366,7 +386,7 @@
     "x_train, x_valid, y_train, y_valid = X_train[:split], X_train[split:], Y_train[:split], Y_train[split:]\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Conv2D(32, kernel_size=(3, 3),\n",
+    "model.add(Conv2D(16, kernel_size=(3, 3),\n",
     "                 activation='relu',\n",
     "                 input_shape=(PIC_SIZE, PIC_SIZE, 3)))\n",
     "\n",
@@ -374,7 +394,7 @@
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(32, (3, 3), activation='relu'))\n",
+    "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
@@ -389,7 +409,7 @@
     "              \n",
     "model.fit(x_train, y_train,\n",
     "          batch_size=128,\n",
-    "          epochs=10,\n",
+    "          epochs=20,\n",
     "          verbose=1,\n",
     "          validation_data=(x_valid, y_valid))\n",
     "          \n",
@@ -403,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -417,13 +437,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['clear primary', 'clear primary agriculture', 'clear primary', 'clear primary agriculture road', 'clear primary']\n"
+     ]
+    }
+   ],
    "source": [
     "# X_test_id, preds -> submission\n",
     "predsText = []\n",
@@ -434,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -445,7 +473,7 @@
     "#image_name,tags\n",
     "#test_0,primary clear agriculture road water\n",
     "\n",
-    "subName = path1 + '/SUB_03_32.csv'\n",
+    "subName = path1 + '/SUB_03_32pix_20ep.csv'\n",
     "f = open(subName, 'w')\n",
     "f.write('image_name,tags\\n')\n",
     "for i in range(0,len(predsText)):\n",
