--- a/pynb_03.ipynb
+++ b/pynb_03.ipynb
@@ -489,14 +489,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'numpy.ndarray'>\n",
+      "          0         1             2         3             4         5  \\\n",
+      "0  0.000004  0.538046  1.224637e-06  0.528929  3.964421e-01  0.000135   \n",
+      "1  0.031490  0.994926  7.212393e-03  0.988896  2.227317e-04  0.012862   \n",
+      "2  0.000294  0.999712  6.304141e-09  0.997021  1.840773e-08  0.000138   \n",
+      "3  0.001438  0.583192  6.869749e-04  0.999635  2.919203e-04  0.000043   \n",
+      "4  0.003563  0.975093  3.958366e-04  0.980075  4.451776e-03  0.002595   \n",
+      "\n",
+      "          6         7         8         9        10        11        12  \\\n",
+      "0  0.428439  0.054489  0.004686  0.006223  0.000094  0.004500  0.024898   \n",
+      "1  0.262061  0.001626  0.244499  0.002062  0.002812  0.262485  0.111321   \n",
+      "2  0.093129  0.000291  0.154543  0.000032  0.000003  0.406385  0.018029   \n",
+      "3  0.148630  0.493397  0.149092  0.048355  0.000015  0.015096  0.009144   \n",
+      "4  0.661714  0.078511  0.163942  0.001653  0.009635  0.147330  0.079713   \n",
+      "\n",
+      "             13        14        15        16          id  \n",
+      "0  1.047068e-07  0.099228  0.036201  0.000001  test_23963  \n",
+      "1  1.746069e-02  0.665940  0.539660  0.058594  test_16098  \n",
+      "2  1.163137e-06  0.961812  0.880454  0.000047  test_37741  \n",
+      "3  6.540184e-04  0.400130  0.076724  0.001238  test_17504  \n",
+      "4  1.038060e-04  0.536789  0.324726  0.001491  test_20742  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print (type(preds))\n",
+    "raw = pd.DataFrame(preds)\n",
+    "raw['id'] = X_test_id\n",
+    "print (raw.head())\n",
+    "raw.to_csv('RAW_03_64px_25ep.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
