--- a/pynb_23.ipynb
+++ b/pynb_23.ipynb
@@ -2,13 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from skimage import io\n",
     "from matplotlib import pyplot as plt\n",
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -138,183 +147,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  3.20000000e+01   0.00000000e+00   0.00000000e+00   1.25510000e+04\n",
-      "   5.22590000e+04   6.03000000e+02   2.30000000e+01   0.00000000e+00\n",
-      "   3.40000000e+01   0.00000000e+00   0.00000000e+00   1.00000000e+00\n",
-      "   0.00000000e+00   1.00000000e+00   1.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   5.00000000e+00   0.00000000e+00   0.00000000e+00   2.00000000e+00\n",
-      "   4.00000000e+00   0.00000000e+00   2.00000000e+00   0.00000000e+00\n",
-      "   2.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   5.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   3.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   5.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   3.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   9.00000000e+01   0.00000000e+00   8.16000000e+02   5.09270000e+04\n",
-      "   1.35060000e+04   1.82000000e+02   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   1.00000000e+00\n",
-      "   2.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   3.00000000e+00   0.00000000e+00   2.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   1.00000000e+00\n",
-      "   0.00000000e+00   2.00000000e+00   0.00000000e+00   1.00000000e+00\n",
-      "   2.00000000e+00   1.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   3.40000000e+01   2.30900000e+03   5.81460000e+04   4.69500000e+03\n",
-      "   2.73000000e+02   8.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   3.20000000e+01   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   7.00000000e+00   1.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   3.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   3.00000000e+00\n",
-      "   0.00000000e+00   1.00000000e+00   1.00000000e+00   0.00000000e+00\n",
-      "   6.00000000e+00   1.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   3.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   5.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   3.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   5.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   9.10000000e+01   0.00000000e+00   0.00000000e+00   4.50000000e+02\n",
-      "   3.35200000e+03   1.09320000e+04   1.93220000e+04   1.70260000e+04\n",
-      "   1.11140000e+04   2.86400000e+03   3.62000000e+02   1.00000000e+01\n",
-      "   2.00000000e+00   1.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   3.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   1.00000000e+00   0.00000000e+00   1.00000000e+00   0.00000000e+00\n",
-      "   2.00000000e+00   3.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   6.48610000e+04   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   2.20000000e+01\n",
-      "   4.32636890e+03   3.66302528e+03   2.49403081e+03   7.11953702e+03\n",
-      "   7.98738145e+02   5.21727736e+02   9.17993052e+02   1.32179325e+03\n",
-      "   0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "   5.73440000e+04   2.97420000e+04   6.14400000e+04   3.05750000e+04\n",
-      "   2.47096249e+03   5.22092194e+02   2.11534609e+03   8.36272554e+00\n",
-      "   4.42834118e+01   1.20072242e+01   3.97348957e+01   2.98028492e-01]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (getImageData('/home/gs/DataScientist/planet/train-tif/train_1.tif'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "read train y...\n",
-      "Y_train lines read: 40479\n",
-      "Read train images\n",
-      "/home/gs/DataScientist/planet/train-tif/*.tif\n",
-      "  files read: 2500\n",
-      "  files read: 5000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/skimage/external/tifffile/tifffile.py:2546: UserWarning: unpack: string size must be a multiple of element size\n",
-      "  warnings.warn(\"unpack: %s\" % e)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  files read: 7500\n",
-      "  files read: 10000\n",
-      "  files read: 12500\n",
-      "  files read: 15000\n",
-      "  files read: 17500\n",
-      "  files read: 20000\n",
-      "invalid offset  error reading file /home/gs/DataScientist/planet/train-tif/train_28173.tif\n",
-      "  files read: 22500\n",
-      "invalid offset  error reading file /home/gs/DataScientist/planet/train-tif/train_18772.tif\n",
-      "  files read: 25000\n",
-      "  files read: 27500\n",
-      "  files read: 30000\n",
-      "  files read: 32500\n",
-      "  files read: 35000\n",
-      "invalid TIFF file  error reading file /home/gs/DataScientist/planet/train-tif/train_5023.tif\n",
-      "  files read: 37500\n",
-      "  files read: 40000\n",
-      "X_train shape   : (40479, 344)\n",
-      "Y_trainAll shape: (40479, 17)\n",
-      "Read test images\n",
-      "/home/gs/DataScientist/planet/test-tif/*.tif\n",
-      "  files read: 2500\n",
-      "  files read: 5000\n",
-      "  files read: 7500\n",
-      "  files read: 10000\n",
-      "  files read: 12500\n",
-      "  files read: 15000\n",
-      "  files read: 17500\n",
-      "  files read: 20000\n",
-      "  files read: 22500\n",
-      "too many indices for array  error reading file /home/gs/DataScientist/planet/test-tif/test_17393.tif\n",
-      "  files read: 25000\n",
-      "  files read: 27500\n",
-      "  files read: 30000\n",
-      "  files read: 32500\n",
-      "  files read: 35000\n",
-      "  files read: 37500\n",
-      "  files read: 40000\n",
-      "(40669, 344)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read Y_train\n",
     "\n",
@@ -406,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -433,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -442,7 +294,7 @@
    "outputs": [],
    "source": [
     "# load data\n",
-    "\n",
+    "import pickle\n",
     "Y_trainAll = pickle.load( open( \"SAVE_yTrainAll.p\", \"rb\" ) )\n",
     "X_train = pickle.load( open( \"SAVE_xTrain.p\", \"rb\" ) )\n",
     "X_test = pickle.load( open( \"SAVE_xTest.p\", \"rb\" ) )\n",
@@ -477,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1057,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1108,23 +960,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'module' object has no attribute 'importance'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-0ec0741c4e96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimportance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'module' object has no attribute 'importance'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = xgb.importance(model=model)\n",
     "print (i)"
@@ -1146,28 +988,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(40669, 17)\n",
-      "['clear primary agriculture', 'clear primary', 'clear primary water', 'clear primary water', 'primary partly_cloudy']\n",
-      "   image_name                       tags\n",
-      "0  test_34045  clear primary agriculture\n",
-      "1  test_32937              clear primary\n",
-      "2  test_10537        clear primary water\n",
-      "3  test_30945        clear primary water\n",
-      "4  test_13470      primary partly_cloudy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# predsDF to prediction file\n",
     "\n",
