--- a/pynb_mergeVote.ipynb
+++ b/pynb_mergeVote.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -18,6 +18,8 @@
       "SUB_PUB_submission_bag_of_colors_0.819.csv\n",
       "(40669, 2)\n",
       "SUB_PUB_sub_0.8527_XGB_histograms.csv\n",
+      "(40669, 2)\n",
+      "SUB_24_0.8813_0.01eta_0.2.csv\n",
       "(40669, 2)\n"
      ]
     }
@@ -30,10 +32,11 @@
     "file1 = 'SUB_02_64_35000_10ep.csv'\n",
     "file2 = 'SUB_PUB_submission_bag_of_colors_0.819.csv'\n",
     "file3 = 'SUB_PUB_sub_0.8527_XGB_histograms.csv'\n",
+    "file4 = 'SUB_24_0.8813_0.01eta_0.2.csv'\n",
     "\n",
-    "listFiles = [file1, file2, file3]\n",
+    "listFiles = [file1, file2, file3, file4]\n",
     "\n",
-    "THRESHOLD = 1\n",
+    "THRESHOLD = 2\n",
     "\n",
     "totalDict = {}\n",
     "\n",
@@ -62,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -73,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'clear': 3, 'primary': 3}\n"
+      "{'clear': 4, 'primary': 4}\n"
      ]
     }
    ],
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -91,13 +94,13 @@
    },
    "outputs": [],
    "source": [
-    "f = open('SUB_MERGE_02.csv', 'w')\n",
+    "f = open('SUB_MERGE_03.csv', 'w')\n",
     "f.write('image_name,tags\\n')\n",
     "for name in totalDict:\n",
     "    f.write(name+',')\n",
     "    tagString = ''\n",
     "    for t in totalDict[name]:\n",
-    "        if totalDict[name][t] > THRESHOLD:\n",
+    "        if totalDict[name][t] >= THRESHOLD:\n",
     "            tagString = tagString + t + ' '\n",
     "    tagString.rstrip()\n",
     "    f.write(tagString)\n",
