--- a/pynb_resizeTIF.ipynb
+++ b/pynb_resizeTIF.ipynb
@@ -82,6 +82,7 @@
     "        print ('exception handling file {}'.format(fl))\n",
     "        i1 = np.zeros(64*64*4)\n",
     "        i1 = np.resize(i1, (64, 64, 4))\n",
+    "        i1[i1==0] = 16384\n",
     "    name = path1+targetTrainPath+'/'+flbase\n",
     "    io.imsave(name, i1)\n",
     "\n",
@@ -97,7 +98,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -169,6 +172,7 @@
     "        print ('exception handling file {}'.format(fl))\n",
     "        i1 = np.zeros(64*64*4)\n",
     "        i1 = np.resize(i1, (64, 64, 4))\n",
+    "        i1[i1==0] = 16384\n",
     "    name = path1+targetTestPath+'/'+flbase\n",
     "    io.imsave(name, i1)"
    ]
