--- a/pynb_04.ipynb
+++ b/pynb_04.ipynb
@@ -69,6 +69,7 @@
     "testPath = '/test-tif-64'\n",
     "\n",
     "PIC_SIZE = 64\n",
+    "PIC_DEPTH = 4\n",
     "\n"
    ]
   },
@@ -283,19 +284,21 @@
    },
    "outputs": [],
    "source": [
+    "# train / use larger split value for predictions, more epochs\n",
+    "\n",
     "split = 35000\n",
     "x_train, x_valid, y_train, y_valid = X_train[:split], X_train[split:], Y_train[:split], Y_train[split:]\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Conv2D(16, kernel_size=(3, 3),\n",
+    "model.add(Conv2D(64, kernel_size=(3, 3),\n",
     "                 activation='relu',\n",
-    "                 input_shape=(PIC_SIZE, PIC_SIZE, 3)))\n",
+    "                 input_shape=(PIC_SIZE, PIC_SIZE, PIC_DEPTH)))\n",
     "\n",
-    "model.add(Conv2D(32, (3, 3), activation='relu'))\n",
+    "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(Conv2D(128, (3, 3), activation='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
@@ -332,6 +335,7 @@
    },
    "outputs": [],
    "source": [
+    "# predict\n",
     "X_test = np.array(X_test, np.float16) / 65535.\n",
     "preds = model.predict(X_test, batch_size=128)\n"
    ]
