--- a/pynb_04.ipynb
+++ b/pynb_04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -14,8 +14,18 @@
      "output_type": "stream",
      "text": [
       "/usr/local/lib/python2.7/dist-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "Using TensorFlow backend.\n"
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "No module named keras.models",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5fa3465a464c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mKFold\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDense\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDropout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFlatten\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvolutional\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mConvolution2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMaxPooling2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mZeroPadding2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAveragePooling2D\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named keras.models"
      ]
     }
    ],
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -68,9 +78,24 @@
     "trainPath = '/train-tif-64'\n",
     "testPath = '/test-tif-64'\n",
     "\n",
-    "PIC_SIZE = 64\n",
-    "PIC_DEPTH = 4\n",
-    "\n"
+    "RESIZE = True\n",
+    "PIC_SIZE = 16\n",
+    "PIC_DEPTH = 7\n",
+    "\n",
+    "def addChannels (i1):\n",
+    "    r = i1[:,:,0]\n",
+    "    g = i1[:,:,1]\n",
+    "    b = i1[:,:,2]\n",
+    "    nir = i1[:,:,3]\n",
+    "    evi = 2.5 * (nir - r) / (nir + 6 * r - 7.5 * b + 1)\n",
+    "    ndvi = (nir - r) / (nir.astype('float') + r)\n",
+    "    arvi = (nir - (2 * r - b)) / (nir.astype('float') + (2 * r + b) )\n",
+    "    res = np.dstack((i1, evi,ndvi,arvi))\n",
+    "    return(res)\n",
+    "\n",
+    "def resizeImage (img):\n",
+    "    img = transform.resize(img, (PIC_SIZE, PIC_SIZE))\n",
+    "    return (img)\n"
    ]
   },
   {
@@ -158,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_im_cv2(path):\n",
+    "def getImage(path):\n",
     "    img = io.imread(path)\n",
     "    return img\n",
     "\n",
@@ -174,7 +199,10 @@
     "    files = glob.glob(path)\n",
     "    for fl in files:\n",
     "        flbase = os.path.basename(fl)\n",
-    "        img = get_im_cv2(fl)\n",
+    "        img = getImage(fl)\n",
+    "        if RESIZE == True:\n",
+    "            img = resizeImage(img)\n",
+    "        img = addChannels(img)\n",
     "        X_train.append(img)\n",
     "        name = flbase.replace('.tif', '')\n",
     "        X_train_id.append(name)\n",
@@ -194,7 +222,10 @@
     "    files = glob.glob(path)\n",
     "    for fl in files:\n",
     "        flbase = os.path.basename(fl)\n",
-    "        img = get_im_cv2(fl)\n",
+    "        img = getImage(fl)\n",
+    "        if RESIZE == True:\n",
+    "            img = resizeImage(img)\n",
+    "        img = addChannels(img)\n",
     "        X_test.append(img)\n",
     "        name = flbase.replace('.tif', '')\n",
     "        X_test_id.append(name)\n",
@@ -256,11 +287,33 @@
    },
    "outputs": [],
    "source": [
+    "print ('convert...')\n",
     "Y_train = np.array(Y_train, np.uint8)\n",
-    "X_train = np.array(X_train, np.float16) / 65535.\n",
+    "X_train = np.array(X_train, np.float16)\n",
+    "X_test = np.array(X_test, np.float16) \n",
     "\n",
+    "print ('normalize...')\n",
+    "for i in range(0,7):\n",
+    "    mi = np.min( np.min(X_train[:,:,:,i]), np.min(X_test[:,:,:,i]) )\n",
+    "    ma = np.max( np.max(X_train[:,:,:,i]), np.max(X_test[:,:,:,i]) )\n",
+    "    X_train[:,:,:,i] = (X_train[:,:,:,i] - mi) / (ma - mi)\n",
+    "    X_test[:,:,:,i]  = (X_test[:,:,:,i] - mi) / (ma - mi)\n",
+    "\n",
+    "print ('train')\n",
+    "print (np.min(X_train))\n",
+    "print (np.mean(X_train))\n",
+    "print (np.max(X_train))\n",
+    "    \n",
+    "print ('test')\n",
+    "print (np.min(X_test))\n",
+    "print (np.mean(X_test))\n",
+    "print (np.max(X_test))\n",
+    "    \n",
+    "    \n",
+    "print ('shapes')\n",
     "print(X_train.shape)\n",
-    "print(Y_train.shape)"
+    "print(Y_train.shape)\n",
+    "print(X_test.shape)"
    ]
   },
   {
@@ -290,17 +343,17 @@
     "x_train, x_valid, y_train, y_valid = X_train[:split], X_train[split:], Y_train[:split], Y_train[split:]\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Conv2D(64, kernel_size=(3, 3),\n",
+    "model.add(Conv2D(32, kernel_size=(5, 5),\n",
     "                 activation='relu',\n",
     "                 input_shape=(PIC_SIZE, PIC_SIZE, PIC_DEPTH)))\n",
     "\n",
-    "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(Conv2D(64, (5, 5), activation='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(128, (3, 3), activation='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "model.add(Dropout(0.25))\n",
+    "#model.add(Conv2D(128, (5, 5), activation='relu'))\n",
+    "#model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "#model.add(Dropout(0.25))\n",
     "\n",
     "model.add(Flatten())\n",
     "model.add(Dense(128, activation='relu'))\n",
@@ -336,7 +389,7 @@
    "outputs": [],
    "source": [
     "# predict\n",
-    "X_test = np.array(X_test, np.float16) / 65535.\n",
+    "\n",
     "preds = model.predict(X_test, batch_size=128)\n"
    ]
   },
